syntax = "proto3";

option csharp_namespace = "CheckService";

service CheckService {
  rpc CreateCheck (CreateCheckRequest) returns (CreateCheckResponse);
}

message CreateCheckRequest {
  string order_id = 1;
  repeated CheckItem items = 2;
}

message CheckItem {
  int32 beerId = 1;
  string name = 2;
  double price = 3;
}

message CreateCheckResponse {
  string file_path = 1;
}
